Noteworthy changes in version 0.4.6 (unreleased)
------------------------------------------------

 * DNs in pkcs#10 request are now created in reversed order as
   specified by rfc2253.

Noteworthy changes in version 0.4.5 (2002-08-23)
------------------------------------------------

 * Removed some debugging output.  

 * Added an autoconf macro.


Noteworthy changes in version 0.4.4 (2002-08-09)
------------------------------------------------

 * Multiple signatures can now be created and parsed.


Noteworthy changes in version 0.4.3 (2002-06-25)
------------------------------------------------

 * More bug fixes.

 * Interface changes relative to the 0.4.2 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_writer_write_octet_string   NEW
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Noteworthy changes in version 0.4.2 (2002-06-04)
------------------------------------------------

 * Some bug fixes and a new function.

 * Interface changes relative to the 0.4.1 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_cms_identify       NEW
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Noteworthy changes in version 0.4.1 (2002-05-03)
------------------------------------------------

 * Minor fixes.

Noteworthy changes in version 0.4.0 (2002-04-15)
------------------------------------------------
 
 * Nearly all stuff needed for the Aegypten project is now in place.


 Copyright 2002 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.